fixed oar interraction with ripple on mobile

--- a/src/layouts/general-layout.module.scss
+++ b/src/layouts/general-layout.module.scss
@@ -1,8 +1,5 @@
-@import "core/variables";
-
 .menuAndContentwrapper {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: $bg-shade-1;
 }
